# Change Log
[ToLaserBlade (Fabric)](https://www.curseforge.com/minecraft/mc-mods/tolaserblade-fabric).
[Source](https://github.com/Iunius118/ToLaserBlade-Fabric).

## [Unreleased]

## [1.19-pre1-0.6.0.2]
### Changed
- Update to Minecraft 1.19-pre1.
- Require Fabric Loader 0.14.6+, Fabric API 0.53.0+, and Cloth Config 7.0.65+.
- Refactor laser blade upgrade.

## [22w17a-0.6.0.1]
### Changed
- Update to Minecraft 22w17a (1.19-snapshot).
- Require Fabric Loader 0.14.3+, Fabric API 0.51.3+, and Cloth Config 7.0.61+.

## [1.18.2-0.6.0.0]
### Added
- Config file (tolaserblade.toml).
  - enableLaserTrap: Enable laser trap.
  - canLaserTrapAttackPlayer: Allow laser trap to attack player.
  - canLaserTrapHeatUpFurnace: Allow laser trap to light furnace.

### Changed
- Require Cloth Config.
- Update Fabric API to 0.51.0.

## [1.18.2-0.5.0.0]
### Changed
- Update to Minecraft 1.18.2.
- Update Fabric API to 0.47.8.

## [1.18-0.4.5.0]
### Added
- Support LambDynamicLights to make laser blades emit light.

## [1.18-0.4.4.0]
### Changed
- Update to Minecraft 1.18.

## [1.17.1-0.4.4.0]
### Added
- Simplified Chinese (zh_cn) translation (thanks to tankyap).
- Japanese (ja_jp) translation.

## [1.17.1-0.4.3.0]
### Added
- Recipes to upgrade Laser Blades' attack damage.

### Changed
- Update Fabric API to 0.40.0.

## [1.17.1-0.4.2.0]
### Added
- Sound events that will be fired when Laser Blades are swung.

### Changed
- Update Fabric API to 0.37.1.
- Rename shader `rendertype_laser_blade_flat` to `rendertype_laser_blade_unlit`.

## [1.17.1-0.4.1.0]
### Added
- Laser Furnace function to Laser Trap.

## [1.17.1-0.4.0.0]
### Added
- Recipes to switch blend mode of blade color.

### Changed
- Update to Minecraft 1.17.1.
- Change burn time of Fire Aspect in Laser Trap to 1 second.

## [1.17-0.3.0.0]
### Added
- Light Element enchantment.
- Recipes to upgrade Laser Blade.
  - Enchanting with Light Element, enchanting with Silk Touch, and increasing attack speed.